--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
 									}]'
-									><a href='#' class='btn btn--lg btn--color'>View Project</a>
+									><a href='portfolio-gallery.html' class='btn btn--lg btn--color'>Voir les  Project</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -334,7 +334,7 @@
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
 									}]'
-									><a href='#' class='btn btn--lg btn--color'>Voir les projets</a>
+									><a href='portfolio-gallery.html' class='btn btn--lg btn--color'>Voir les projets</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -428,7 +428,7 @@
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
 									}]'
-									><a href='#' class='btn btn--lg btn--color'>Voir les Project</a>
+									><a href='portfolio-gallery.html' class='btn btn--lg btn--color'>Voir les Project</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -618,7 +618,7 @@
 			</section> <!-- end testimonials -->
 
 			<!-- Partners -->
-			<!-- <div class="partners bg-light text-center">
+			<div class="partners bg-light text-center">
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-2">
@@ -653,7 +653,7 @@
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</div> 
 
 			<!-- From Blog -->
 			<!-- <section class="section-wrap blog-grid">
@@ -739,7 +739,7 @@
 
 					</div>
 				</div>
-			</section>  -->
+			</section>   -->
 			<!-- end from blog -->
 			<br>
 			<br>
