--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sedona | About</title>
+	<title>Axium | About</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -348,7 +348,7 @@
                       </div>
                     </div>										
                     <h5 class="team__name">Melissa Shredinger</h5>
-                    <span class="team__occupation">Sedona White</span>								
+                    <span class="team__occupation">Axium White</span>								
                   </div>
                 </div>
 
