--- a/blog-masonry.html
+++ b/blog-masonry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sedona | Blog Masonry</title>
+	<title>Axium | Blog Masonry</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -452,7 +452,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							&copy; 2018 Axium, Made by <a href="https://deothemes.com">DeoThemes</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
