--- a/icons.html
+++ b/icons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sedona | Icons</title>
+	<title>Axium | Icons</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -150,7 +150,7 @@
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Icons</h1>
-						<p class="page-title__subtitle">Enjoy the collection of premium icons included in Sedona theme</p>
+						<p class="page-title__subtitle">Enjoy the collection of premium icons included in Axium theme</p>
 					</div>
 				</div>
 			</section> <!-- end page title -->
@@ -1101,7 +1101,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							&copy; 2018 Axium, Made by <a href="https://deothemes.com">DeoThemes</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
