--- a/index-2.html
+++ b/index-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sedona | Home 2</title>
+	<title>Axium | Home 2</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -47,7 +47,7 @@
 						</div>
 						<div class="top-bar__item">
 							<i class="top-bar__icon ui-email"></i>
-							<a href="mailto:hi@sedona.com" class="top-bar__email">hi@sedona.com</a>
+							<a href="mailto:hi@Axium.com" class="top-bar__email">hi@Axium.com</a>
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -160,7 +160,7 @@
 								<!-- Mobile Email -->
 								<div class="nav__email nav__email--mobile d-lg-none">
 									<span class="nav__email-text">Email us:</span>
-									<a href="mailto:hi@sedona.com" class="nav__email-email">hi@sedona.com</a>
+									<a href="mailto:hi@Axium.com" class="nav__email-email">hi@Axium.com</a>
 								</div>
 
 								<!-- Mobile Socials -->
@@ -203,7 +203,7 @@
 							data-slotamount="1"
 							data-masterspeed="1200"
 							data-delay="8000"
-							data-title="Sedona Theater"
+							data-title="Axium Theater"
 							>
 							<!-- MAIN IMAGE -->
 							<img src="img/revolution/home-2/1.jpg"
@@ -261,7 +261,7 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'
-								>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								>The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
 							</div>
 
 							<!-- BUTTON -->
@@ -482,7 +482,7 @@
 											</div>
 										</div>										
 										<h5 class="team__name">Melissa Shredinger</h5>
-										<span class="team__occupation">Sedona White</span>								
+										<span class="team__occupation">Axium White</span>								
 									</div>
 								</div>
 
@@ -667,7 +667,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							&copy; 2018 Axium, Made by <a href="https://deothemes.com">DeoThemes</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
