--- a/index-3.html
+++ b/index-3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sedona | Home 3</title>
+	<title>Axium | Home 3</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -126,7 +126,7 @@
 							<!-- Mobile Email -->
 							<div class="nav__email nav__email--mobile d-lg-none">
 								<span class="nav__email-text">Email us:</span>
-								<a href="mailto:hi@sedona.com" class="nav__email-email">hi@sedona.com</a>
+								<a href="mailto:hi@Axium.com" class="nav__email-email">hi@Axium.com</a>
 							</div>
 							
 							<!-- Mobile Socials -->
@@ -150,7 +150,7 @@
 							</div>
 
 							<span class="copyright">
-								© 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+								© 2018 Axium, Made by <a href="https://deothemes.com">DeoThemes</a>
 							</span>
 						</div>		
 
@@ -175,7 +175,7 @@
 							data-slotamount="1"
 							data-masterspeed="1200"
 							data-delay="8000"
-							data-title="Sedona Theater"
+							data-title="Axium Theater"
 							>
 							<!-- MAIN IMAGE -->
 							<img src="img/revolution/home-3/1.jpg"
@@ -233,7 +233,7 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'
-								>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								>The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
 							</div>
 
 							<!-- BUTTON -->
@@ -268,7 +268,7 @@
 							data-slotamount="1"
 							data-masterspeed="1200"
 							data-delay="8000"
-							data-title="Sedona Theater"
+							data-title="Axium Theater"
 							>
 							<!-- MAIN IMAGE -->
 							<img src="img/revolution/home-3/2.jpg"
@@ -326,7 +326,7 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'
-								>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								>The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
 							</div>
 
 							<!-- BUTTON -->
@@ -361,7 +361,7 @@
 							data-slotamount="1"
 							data-masterspeed="1200"
 							data-delay="8000"
-							data-title="Sedona Theater"
+							data-title="Axium Theater"
 							>
 							<!-- MAIN IMAGE -->
 							<img src="img/revolution/home-3/3.jpg"
@@ -419,7 +419,7 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'
-								>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								>The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
 							</div>
 
 							<!-- BUTTON -->
@@ -779,7 +779,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							&copy; 2018 Axium, Made by <a href="https://deothemes.com">DeoThemes</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
