--- a/index-4.html
+++ b/index-4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Sedona | Home 4</title>
+	<title>Axium | Home 4</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -117,7 +117,7 @@
         <!-- Mobile Email -->
         <div class="nav__email nav__email--mobile d-lg-none">
           <span class="nav__email-text">Email us:</span>
-          <a href="mailto:hi@sedona.com" class="nav__email-email">hi@sedona.com</a>
+          <a href="mailto:hi@Axium.com" class="nav__email-email">hi@Axium.com</a>
         </div>
 
         <!-- Mobile Socials -->
@@ -140,7 +140,7 @@
       <!-- Mobile Email -->
       <div class="nav__email nav__email--mobile">
         <span class="nav__email-text">Email us:</span>
-        <a href="mailto:hi@sedona.com" class="nav__email-email">hi@sedona.com</a>
+        <a href="mailto:hi@Axium.com" class="nav__email-email">hi@Axium.com</a>
       </div>
 
       <!-- Mobile Socials -->
@@ -245,7 +245,7 @@
               <!-- Mobile Email -->
               <div class="nav__email nav__email--mobile d-lg-none">
                 <span class="nav__email-text">Email us:</span>
-                <a href="mailto:hi@sedona.com" class="nav__email-email">hi@sedona.com</a>
+                <a href="mailto:hi@Axium.com" class="nav__email-email">hi@Axium.com</a>
               </div>
 
               <!-- Mobile Socials -->
@@ -305,7 +305,7 @@
 							data-slotamount="1"
 							data-masterspeed="1200"
 							data-delay="8000"
-							data-title="Sedona Theater"
+							data-title="Axium Theater"
 							>
 							<!-- MAIN IMAGE -->
 							<img src="img/revolution/home-4/1.jpg"
@@ -363,7 +363,7 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'
-								>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								>The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
 							</div>
 
 							<!-- BUTTON -->
@@ -398,7 +398,7 @@
 							data-slotamount="1"
 							data-masterspeed="1200"
 							data-delay="8000"
-							data-title="Sedona Theater"
+							data-title="Axium Theater"
 							>
 							<!-- MAIN IMAGE -->
 							<img src="img/revolution/home-4/2.jpg"
@@ -456,7 +456,7 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'
-								>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								>The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
 							</div>
 
 							<!-- BUTTON -->
@@ -491,7 +491,7 @@
               data-slotamount="1"
               data-masterspeed="1200"
               data-delay="8000"
-              data-title="Sedona Theater"
+              data-title="Axium Theater"
               >
               <!-- MAIN IMAGE -->
               <img src="img/revolution/home-4/3.jpg"
@@ -549,7 +549,7 @@
                   "frame":"999",
                   "to":"opacity:0;","ease":"Power3.easeOut"
                 }]'
-                >The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+                >The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
               </div>
 
               <!-- BUTTON -->
@@ -584,7 +584,7 @@
               data-slotamount="1"
               data-masterspeed="1200"
               data-delay="8000"
-              data-title="Sedona Theater"
+              data-title="Axium Theater"
               >
               <!-- MAIN IMAGE -->
               <img src="img/revolution/home-4/4.jpg"
@@ -642,7 +642,7 @@
                   "frame":"999",
                   "to":"opacity:0;","ease":"Power3.easeOut"
                 }]'
-                >The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+                >The Axium Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
               </div>
 
               <!-- BUTTON -->
@@ -681,7 +681,7 @@
 
             <div class="col-md-6">
               <span class="copyright">
-                &copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+                &copy; 2018 Axium, Made by <a href="https://deothemes.com">DeoThemes</a>
               </span>
             </div>
 
