--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
 								</li>
 							</ul> <!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
-								<span class="nav__phone-text">Contactez-nous:</span>
-								<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a>
+								<!-- <span class="nav__phone-text">Contactez-nous:</span>
+								<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a> -->
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
