--- a/contact.html
+++ b/contact.html
@@ -107,10 +107,10 @@
 									</ul> -->
 								</li>
 							</ul> <!-- end menu -->
-							<div class="nav__phone nav__phone--mobile d-lg-none">
+							<!-- <div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Contactez-nous:</span>
 								<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a>
-							</div>
+							</div> -->
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
@@ -123,8 +123,8 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Contactez-nous:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a>
+							<!-- <span class="nav__phone-text">Contactez-nous:</span>
+							<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a> -->
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
