--- a/portfolio.html
+++ b/portfolio.html
@@ -123,8 +123,8 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Contactez-nous:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a>
+							<!-- <span class="nav__phone-text">Contactez-nous:</span>
+							<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a> -->
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
