--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
-
+	
 </head>
 
 <body>
@@ -116,8 +116,8 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Contactez-nous:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a>
+							<!-- <span class="nav__phone-text">Contactez-nous:</span>
+							<a href="tel:1-800-995-3959" class="nav__phone-number">+221 77 297 70 43</a> -->
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
