--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
-
+	<style>
+		.btn {
+    border-radius: 12px; /* Ajuste l'arrondi comme souhaité */
+    padding: 10px;       /* Ajuste le padding pour le confort visuel */
+    width: 200px;  
+	height: auto;      /* Fixe la largeur du bouton */
+    text-align: center;  /* Aligne le texte au centre */
+    display: inline-block; /* Assure que le bouton est inline avec les autres éléments */
+    box-sizing: border-box; /* Inclut le padding dans la largeur totale */
+}
+	</style>
 </head>
 
 <body>
@@ -442,7 +452,7 @@
 								<div class="col-sm-4">
 									<div class="feature">
 										<i class="icon-Hotel-3 feature__icon"></i>
-										<h4 class="feature__title">BTP</h4>
+										<h4 class="feature__title">Batiments et Travaux Publics</h4>
 									</div>
 								</div>
 								<div class="col-sm-4">
