--- a/services.html
+++ b/services.html
@@ -23,6 +23,17 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 	<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+	<style>
+		.btn {
+    border-radius: 12px; /* Ajuste l'arrondi comme souhaité */
+    padding: 10px;       /* Ajuste le padding pour le confort visuel */
+    width: 200px;  
+	height: auto;      /* Fixe la largeur du bouton */
+    text-align: center;  /* Aligne le texte au centre */
+    display: inline-block; /* Assure que le bouton est inline avec les autres éléments */
+    box-sizing: border-box; /* Inclut le padding dans la largeur totale */
+}
+	</style>
   
 	<style>
 		.project__img-holder {
